[gd_scene load_steps=8 format=2]

[ext_resource path="res://Src/Components/PlatformerMovementComponent.tscn" type="PackedScene" id=1]
[ext_resource path="res://Src/Components/HitboxComponent.tscn" type="PackedScene" id=2]
[ext_resource path="res://Src/Components/HurtboxComponent.tscn" type="PackedScene" id=3]
[ext_resource path="res://Src/Components/HealthComponent.tscn" type="PackedScene" id=4]
[ext_resource path="res://Src/Actors/LivingActor.gd" type="Script" id=5]
[ext_resource path="res://Src/Components/EffectCreatorComponent.tscn" type="PackedScene" id=6]
[ext_resource path="res://Src/Actors/Effects/HitEffect.tscn" type="PackedScene" id=7]

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 5 )

[node name="HealthComponent" parent="." instance=ExtResource( 4 )]

[node name="PlatformerMovementComponent" parent="." instance=ExtResource( 1 )]

[node name="HitEffectCreator" parent="." instance=ExtResource( 6 )]
Effect = ExtResource( 7 )

[node name="DeadEffectCreator" parent="." instance=ExtResource( 6 )]

[node name="HurtboxComponent" parent="." instance=ExtResource( 3 )]

[node name="HitboxComponent" parent="." instance=ExtResource( 2 )]

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
[connection signal="hit" from="HealthComponent" to="." method="_on_HealthComponent_hit"]
[connection signal="no_health" from="HealthComponent" to="." method="_on_HealthComponent_no_health"]
[connection signal="area_entered" from="HurtboxComponent" to="." method="_on_HurtboxComponent_area_entered"]
